--- a/sections/orange-section.liquid
+++ b/sections/orange-section.liquid
@@ -23,45 +23,47 @@
             {% endif %}
             </div> 
         </div>
-        <div class="-skew-y-15 bg-orange-500 absolute min-h-300 w-full">
-        </div>
-        <div class="flex flex-row relative">
-            <div class="flex flex-col items-start justify-center ml-6">
-                <h3 class="font-bold text-lg">THE DAY FORMULA</h3>
-                <p class="font-normal text-sm">The DAY formula kick-starts your metabolism in the morning, and keeps it going strong all day long... even if you're stuck at your desk and you can't get to the gym.
-                    </p>
-            </div>
-            <div class="flex items-center justify-center">
-                {% if section.settings.bottle1 != blank %}
-                {% include 'responsive-image' with
-                    image: section.settings.bottle1,
-                    image_class: "",
-                    max_width: 143,
-                    max_height: 267
-                %}
-                {% endif %}
-            </div>
-        </div>
-        <div class="-skew-y-15 bg-violet-500 absolute min-h-300 w-full">
-        </div>
-        <div class="flex flex-row">
-            <div class="flex items-center justify-center">
-                {% if section.settings.bottle != blank %}
-                {% include 'responsive-image' with
-                    image: section.settings.bottle,
-                    image_class: "object-contain",
-                    max_width: 151,
-                    max_height: 274
-                %}
-                {% endif %}
-            </div>
-            <div class="flex flex-col items-start justify-center ml-4 text-white">
-                <h3 class="font-bold text-lg">THE NIGHT FORMULA</h3>
-                <p class="font-normal text-sm">The NIGHT formula burns even more fat with special ingredients that won't keep you awake, while also helping you overcome the late night munchies that may have derailed you in the past.
-                    </p>
-            </div>
-        </div>
         <div class="relative">
+            <div class="-skew-y-15 bg-orange-500 absolute min-h-300 w-full">
+            </div>
+            <div class="flex flex-row relative">
+                <div class="flex flex-col items-start justify-center ml-6">
+                    <h3 class="font-bold text-lg">THE DAY FORMULA</h3>
+                    <p class="font-normal text-sm">The DAY formula kick-starts your metabolism in the morning, and keeps it going strong all day long... even if you're stuck at your desk and you can't get to the gym.
+                        </p>
+                </div>
+                <div class="flex items-center justify-center z-100">
+                    {% if section.settings.bottle1 != blank %}
+                    {% include 'responsive-image' with
+                        image: section.settings.bottle1,
+                        image_class: "",
+                        max_width: 143,
+                        max_height: 267
+                    %}
+                    {% endif %}
+                </div>
+            </div>
+            <div class="-skew-y-15 bg-violet-500 absolute min-h-300 w-full z-10">
+            </div>
+            <div class="flex flex-row relative -mb-12 z-100">
+                <div class="flex items-center justify-center">
+                    {% if section.settings.bottle != blank %}
+                    {% include 'responsive-image' with
+                        image: section.settings.bottle,
+                        image_class: "object-contain",
+                        max_width: 151,
+                        max_height: 274
+                    %}
+                    {% endif %}
+                </div>
+                <div class="flex flex-col items-start justify-center ml-4 text-white">
+                    <h3 class="font-bold text-lg">THE NIGHT FORMULA</h3>
+                    <p class="font-normal text-sm">The NIGHT formula burns even more fat with special ingredients that won't keep you awake, while also helping you overcome the late night munchies that may have derailed you in the past.
+                        </p>
+                </div>
+            </div>
+        </div>
+        <div class="relative z-0">
             <div class="relative">
             {% if section.settings.pair != blank %}
                 {% include 'responsive-image' with
