--- a/sections/violet-section.liquid
+++ b/sections/violet-section.liquid
@@ -21,16 +21,17 @@
         </div>
         <div class="relative">
             <div class="relative">
-            {% if section.settings.pair != blank %}
+                <div class="pair-bg  min-h-740"> 
+            <!-- {% if section.settings.pair != blank %}
                 {% include 'responsive-image' with
                     image: section.settings.pair,
                     image_class: "",
                     max_width: 375,
                     max_height: 777
                 %}
-                {% endif %}
+                {% endif %} -->
             </div>
-            <div class="object-contain"></div>
+            </div>
             <div class="relative -top-40 bg-violet-section-bg">
                 <div class="relative mt-14 flex justify-center items-center mx-2 text-white font-normal text-sm">
                     <p>You'll be amazed at how much easier it is to lose weight when PHEN24 is revving up your metabolism 24 hours a day, 7 days a week.
