--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -23,17 +23,14 @@
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   }
-  .clip{
-    clip-path: polygon(
-      0% 0%,
-      100% 0%,
-      100% calc(100% - 2.5em),
-      50% 100%,
-      0% calc(100% - 2.5em)
-    );
+
+.pair-bg{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: 70%;
+  background-image: {{settings.pair_image}};
   }
 }
-
 
 .header-button{
   border-radius: 3px;
