--- a/assets/app.css
+++ b/assets/app.css
@@ -890,6 +890,15 @@ video {
 .to-purple-700 {
   --tw-gradient-to: #7e22ce;
 }
+.bg-cover {
+  background-size: cover;
+}
+.bg-70 {
+  background-position: 70%;
+}
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
