--- a/assets/app.css
+++ b/assets/app.css
@@ -567,6 +567,9 @@ video {
 .-top-40 {
   top: -10rem;
 }
+.-top-reviews {
+  top: -75px;
+}
 .-top-20 {
   top: -5rem;
 }
@@ -629,6 +632,10 @@ video {
   margin-left: 3.5rem;
   margin-right: 3.5rem;
 }
+.mx-9 {
+  margin-left: 2.25rem;
+  margin-right: 2.25rem;
+}
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -683,6 +690,9 @@ video {
 .mb-4 {
   margin-bottom: 1rem;
 }
+.mt-24 {
+  margin-top: 6rem;
+}
 .mt-60 {
   margin-top: 15rem;
 }
@@ -704,14 +714,14 @@ video {
 .hidden {
   display: none;
 }
+.h-150 {
+  height: 150px;
+}
 .min-h-300 {
   min-height: 300px;
 }
 .min-h-740 {
   min-height: 740px;
-}
-.w-full {
-  width: 100%;
 }
 .w-\[227px\] {
   width: 227px;
@@ -719,8 +729,8 @@ video {
 .w-\[228px\] {
   width: 228px;
 }
-.w-1\/2 {
-  width: 50%;
+.w-150 {
+  width: 150px;
 }
 .min-w-\[240px\] {
   min-width: 240px;
@@ -818,8 +828,14 @@ video {
 .rounded-rounded-3 {
   border-radius: 3px;
 }
+.rounded-50 {
+  border-radius: 50%;
+}
 .border-3 {
   border-width: 3px;
+}
+.border-5 {
+  border-width: 5px;
 }
 .border-b-\[5px\] {
   border-bottom-width: 5px;
@@ -835,6 +851,10 @@ video {
 .border-cyan-400 {
   --tw-border-opacity: 1;
   border-color: rgb(34 211 238 / var(--tw-border-opacity));
+}
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 .bg-green-500 {
   --tw-bg-opacity: 1;
@@ -984,13 +1004,17 @@ video {
   font-size: 1rem;
   line-height: 1.5rem;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 .font-bold {
   font-weight: 700;
