--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -55,7 +55,7 @@
     
 {% schema %}
 {
-    "name": "Day Night Section",
+    "name": "Reviews Section",
     "settings": [
     {
         "type": "image_picker",
