--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -1,5 +1,5 @@
-<div class="relative text-white font-normal">
-    <div class="relative justify-center items-center">
+<div class="relative text-color font-normal">
+    <div class="relative flex justify-center items-center text-black">
         <svg width="200" height="40" viewBox="0 0 200 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M60 0L64.4903 13.8197H79.0211L67.2654 22.3607L71.7557 36.1803L60 27.6393L48.2443 36.1803L52.7346 22.3607L40.9789 13.8197H55.5097L60 0Z" fill="black"/>
             <path d="M20 0L24.4903 13.8197H39.0211L27.2654 22.3607L31.7557 36.1803L20 27.6393L8.2443 36.1803L12.7346 22.3607L0.97887 13.8197H15.5097L20 0Z" fill="black"/>
@@ -8,16 +8,16 @@
             <path d="M180 0L184.49 13.8197H199.021L187.265 22.3607L191.756 36.1803L180 27.6393L168.244 36.1803L172.735 22.3607L160.979 13.8197H175.51L180 0Z" fill="black"/>
             </svg>
     </div>
-    <div class="reltive text-center mx-6 mt-4 mb-3">
+    <div class="reltive text-center mx-6 mt-4 mb-3 text-black">
         RAVE REVIEWS FOR<span class="font-bold"> PHEN24</span>      
     </div>
-    <div class="relative text-center text-xl mx-6">
+    <div class="relative text-center text-xl mx-6 text-black">
         Are You Ready for 24/7 Fat Burning?
     </div>
 
     <div class="relative">
-        <div class="relative justify-center items-center mx-3">
-            <div class="absolute rounded-50 border-5 border-white -top-reviews w-150 h-150">
+        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews">
+            <div class="absolute rounded-50 border-white -top-reviews w-150 h-150">
                 {% if section.settings.review1 != blank %}
                 {% include 'responsive-image' with
                     image: section.settings.review1,
@@ -30,7 +30,7 @@
             <p class="font-bold text-2xl">
                 Finally Lost the COVID 19
             </p>
-            <div class="mt-2">
+            <div class="mt-2 flex justify-center">
                 <svg width="150" height="30" viewBox="0 0 150 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M45 0L48.3677 10.3647H59.2658L50.4491 16.7705L53.8168 27.1353L45 20.7295L36.1832 27.1353L39.5509 16.7705L30.7342 10.3647H41.6323L45 0Z" fill="white"/>
                     <path d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z" fill="white"/>
