--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -1,4 +1,4 @@
-<div class="relative text-color font-normal">
+<div class="relative text-white font-normal">
     <div class="relative flex justify-center items-center text-black">
         <svg width="200" height="40" viewBox="0 0 200 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M60 0L64.4903 13.8197H79.0211L67.2654 22.3607L71.7557 36.1803L60 27.6393L48.2443 36.1803L52.7346 22.3607L40.9789 13.8197H55.5097L60 0Z" fill="black"/>
@@ -16,7 +16,7 @@
     </div>
 
     <div class="relative">
-        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews">
+        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews rounded-20">
             <div class="absolute rounded-50 border-white -top-reviews w-150 h-150">
                 {% if section.settings.review1 != blank %}
                 {% include 'responsive-image' with
