--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -30,7 +30,7 @@
             <p class="font-bold text-2xl">
                 Finally Lost the COVID 19
             </p>
-            <div class="mt-2 flex justify-center">
+            <div class="mt-2">
                 <svg width="150" height="30" viewBox="0 0 150 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M45 0L48.3677 10.3647H59.2658L50.4491 16.7705L53.8168 27.1353L45 20.7295L36.1832 27.1353L39.5509 16.7705L30.7342 10.3647H41.6323L45 0Z" fill="white"/>
                     <path d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z" fill="white"/>
