--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -16,7 +16,7 @@
     </div>
 
     <div class="relative mt-3">
-        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews rounded-20">
+        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews rounded-20 mb-4">
             <div class="absolute rounded-50 border-white -top-reviews w-150 h-150">
                 {% if section.settings.review1 != blank %}
                 {% include 'responsive-image' with
@@ -46,25 +46,24 @@
             </div>
              <div class="mt-8 mb-6">
                 <p class="font-bold text-xs">
-                    Mariah S., Santa Cruz, CA <br/>✅ Verified User
+                    Mariah S., Santa Cruz, CA <p class="mt-4">✅ Verified User</p>
                 </p>
              </div>
             </div>
         </div>
-        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews rounded-20">
+        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews rounded-20 mb-4">
             <div class="absolute rounded-50 border-white -top-reviews w-150 h-150">
-                {% if section.settings.review1 != blank %}
+                {% if section.settings.review2 != blank %}
                 {% include 'responsive-image' with
-                    image: section.settings.review1,
+                    image: section.settings.review2,
                     max_width: 150,
                     max_height: 150
                 %}
                 {% endif %}
             </div>
             <div class="mx-9 mt-24">
-            <p class="font-bold text-2xl">
-                Finally Lost the COVID 19
-            </p>
+            <p class="font-bold text-2xl">THE REAL DEAL
+                </p>
             <div class="mt-2">
                 <svg width="150" height="30" viewBox="0 0 150 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M45 0L48.3677 10.3647H59.2658L50.4491 16.7705L53.8168 27.1353L45 20.7295L36.1832 27.1353L39.5509 16.7705L30.7342 10.3647H41.6323L45 0Z" fill="white"/>
@@ -75,14 +74,44 @@
                     </svg>
             </div>
             <div class="mt-4">
-                <p class="font-bold text-sm">
-                    OK so I put on the Covid 19 (pounds) like everyone else and I was really worried about being able to lose it. Enter PHEN24... and I can finally fit into my work clothes again. Thank you so much.
-                </p>
+                <p class="font-bold text-sm">Reddit is full of bad reviews for fat burners so I was VERY skeptical about this. But PHEN24 is THE REAL DEAL. You helped me get down to my high-school wrestling weight again. Thanks guys!!
+                    </p>
             </div>
              <div class="mt-8 mb-6">
-                <p class="font-bold text-xs">
-                    Mariah S., Santa Cruz, CA <br/>✅ Verified User
+                <p class="font-bold text-xs">Grace R., Amery, W <p class="mt-4">✅ Verified User</p>
+                    </p>
+             </div>
+            </div>
+        </div>
+        <div class="relative flex justify-center items-center mx-3 bg-all-night mt-reviews rounded-20 mb-4">
+            <div class="absolute rounded-50 border-white -top-reviews w-150 h-150">
+                {% if section.settings.review3 != blank %}
+                {% include 'responsive-image' with
+                    image: section.settings.review3,
+                    max_width: 150,
+                    max_height: 150
+                %}
+                {% endif %}
+            </div>
+            <div class="mx-9 mt-24">
+            <p class="font-bold text-2xl">Mamacita's Little Secret
                 </p>
+            <div class="mt-2">
+                <svg width="150" height="30" viewBox="0 0 150 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M45 0L48.3677 10.3647H59.2658L50.4491 16.7705L53.8168 27.1353L45 20.7295L36.1832 27.1353L39.5509 16.7705L30.7342 10.3647H41.6323L45 0Z" fill="white"/>
+                    <path d="M15 0L18.3677 10.3647H29.2658L20.4491 16.7705L23.8168 27.1353L15 20.7295L6.18322 27.1353L9.55093 16.7705L0.734152 10.3647H11.6323L15 0Z" fill="white"/>
+                    <path d="M105 0L108.368 10.3647H119.266L110.449 16.7705L113.817 27.1353L105 20.7295L96.1832 27.1353L99.5509 16.7705L90.7342 10.3647H101.632L105 0Z" fill="white"/>
+                    <path d="M75 0L78.3677 10.3647H89.2658L80.4491 16.7705L83.8168 27.1353L75 20.7295L66.1832 27.1353L69.5509 16.7705L60.7342 10.3647H71.6323L75 0Z" fill="white"/>
+                    <path d="M135 0L138.368 10.3647H149.266L140.449 16.7705L143.817 27.1353L135 20.7295L126.183 27.1353L129.551 16.7705L120.734 10.3647H131.632L135 0Z" fill="white"/>
+                    </svg>
+            </div>
+            <div class="mt-4">
+                <p class="font-bold text-sm">I used to Netflix and Binge every night after getting the kids to bed. Now thanks to "mamacita's little secret" I skip the snacks and my husband and I use our nights for other things (like laundry LOL!!)
+                    </p>
+            </div>
+             <div class="mt-8 mb-6">
+                <p class="font-bold text-xs">Natasha S., Rio Rancho, NM <p class="mt-4">✅ Verified User</p>
+                    </p>
              </div>
             </div>
         </div>
