--- a/sections/day-night.liquid
+++ b/sections/day-night.liquid
@@ -44,7 +44,7 @@
 </section>
 
 <section class="my-2 relative flex flex-col mx-3 justify-center items-center rounded-20 bg-all-night font-bold">
-    <div class="flex flex-col mb-5 mx-3">
+    <div class="flex flex-col mb-5 mx-3 items-center">
         <h1 class="font-bold text-3xl my-3">ALL NIGHT</h1>
         <p class="text-center">The carbs come out at night — so PHEN24 NIGHT is formulated to keep you "on the wagon" in the evening, and promote fat burning while you sleep.
             </p>
