--- a/assets/app.css
+++ b/assets/app.css
@@ -735,6 +735,9 @@ video {
 .w-150 {
   width: 150px;
 }
+.w-\[15\.5rem\] {
+  width: 15.5rem;
+}
 .min-w-\[240px\] {
   min-width: 240px;
 }
@@ -954,6 +957,10 @@ video {
 .px-7 {
   padding-left: 1.75rem;
   padding-right: 1.75rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .pb-8 {
   padding-bottom: 2rem;
