--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -116,6 +116,20 @@
             </div>
         </div>
     </div>
+    <div class="relative flex justify-center place-items-center">
+        <a class="w-full text-lg justify-center text-black flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
+        font-normal bg-green-500 uppercase" href="#some_id">
+        Order <span class="font-bold mr-2"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
+            </svg>
+        </a>
+    </div>
+    <div class="relative flex justify-center place-items-center">
+        <a class="w-full text-xs justify-center text-black flex w-[15.5rem] items-center py-1 whitespace-nowrap px-8 rounded-20 
+        font-normal uppercase" href="#some_id">
+        read more great reviews!
+        </a>
+    </div>
 </div>
     
     
