--- a/assets/app.css
+++ b/assets/app.css
@@ -840,6 +840,9 @@ video {
 .border-3 {
   border-width: 3px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border-b-\[5px\] {
   border-bottom-width: 5px;
 }
@@ -855,9 +858,9 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(34 211 238 / var(--tw-border-opacity));
 }
-.border-white {
+.border-black {
   --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .bg-green-500 {
   --tw-bg-opacity: 1;
