--- a/sections/orange-section.liquid
+++ b/sections/orange-section.liquid
@@ -77,18 +77,18 @@
                     </div>
             </div>
             <div class="object-contain"></div>
-            <div class="relative -top-40 bg-violet-section-bg">
-                <div class="relative mt-14 flex justify-center items-center mx-2 text-white font-normal text-sm">
+            <div class="relative -mt-40 bg-violet-section-bg pt-12">
+                <div class="relative mt-14 flex justify-center items-center mx-2 text-white font-normal text-sm text-center mb-2">
                     <p>You'll be amazed at how much easier it is to lose weight when PHEN24 is revving up your metabolism 24 hours a day, 7 days a week.
                         </p>
                 </div>
-                <div class="relative flex justify-center items-center mx-2 text-white text-sm">
+                <div class="relative flex justify-center items-center mx-2 text-white text-sm text-center mb-6">
                     <p>This is your best chance to finally achieve the weight loss results you've been looking for!
                         </p>
                 </div>
                 <div class="w-full flex justify-center items-center relative bg-black pb-8">
                     <div class="relative flex justify-center place-items-center">
-                        <a class="w-full text-lg justify-center text-black flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
+                        <a class="w-full text-lg justify-center text-black flex w-[300px] items-center py-2 whitespace-nowrap px-8 rounded-20 
                         font-normal bg-green-500 uppercase" href="#some_id">
                         Order <span class="font-bold mr-2"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
