--- a/sections/hero-section.liquid
+++ b/sections/hero-section.liquid
@@ -21,7 +21,7 @@
             </div>
             <div class="flex flex-col md:hidden mt-5">
             <div class="relative flex justify-center place-items-center">
-                <a class="w-full text-lg justify-center text-white flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
+                <a class="w-full text-lg justify-center text-white flex w-[300px] items-center py-2 whitespace-nowrap px-8 rounded-20 
                 font-normal bg-green-500 uppercase" href="#some_id">
                 Order <span class="font-bold"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
@@ -49,7 +49,7 @@
       {% endif %}
       <div class="flex flex-col">
       <div class="relative max-6 flex justify-center items-center mx-6">
-        <a class="w-full text-[22px] justify-center text-black flex max-w-[43rem] items-center py-4 
+        <a class="w-full text-[22px] justify-center text-black flex w-[300px] items-center py-4 
           whitespace-nowrap px-12 rounded-20 font-normal bg-green-500 uppercase" href="#some_id">
           Order <span class="font-bold mr-2">now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
@@ -220,7 +220,7 @@
 </div>
 <div class="flex flex-col mt-3">
   <div class="relative flex justify-center place-items-center">
-    <a class="text-lg justify-center text-black flex max-w-[43rem] items-center py-2 whitespace-nowrap px-12 rounded-20 
+    <a class="text-lg justify-center text-black flex w-[300px] items-center py-2 whitespace-nowrap px-8 rounded-20 
     font-normal bg-green-500 uppercase" href="#some_id">
     Order <span class="font-bold mr-2"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
