--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -1,4 +1,4 @@
-<div class="relative text-white font-normal">
+<section class="relative text-white font-normal">
     <div class="relative flex justify-center items-center text-black">
         <svg width="200" height="40" viewBox="0 0 200 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M60 0L64.4903 13.8197H79.0211L67.2654 22.3607L71.7557 36.1803L60 27.6393L48.2443 36.1803L52.7346 22.3607L40.9789 13.8197H55.5097L60 0Z" fill="black"/>
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div class="relative flex justify-center place-items-center">
-        <a class="w-full text-lg justify-center text-black flex w-[300px] items-center py-2 whitespace-nowrap px-8 rounded-20 
+        <a class=" text-lg justify-center text-black flex w-[300px] items-center py-2 whitespace-nowrap px-8 rounded-20 
         font-normal bg-green-500 uppercase" href="#some_id">
         Order <span class="font-bold mr-2"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
@@ -125,12 +125,12 @@
         </a>
     </div>
     <div class="relative flex justify-center place-items-center mt-2">
-        <a class="w-full text-xs  justify-center border-black border-2 text-black flex w-[15.5rem] items-center py-1 whitespace-nowrap px-8 rounded-20 
+        <a class="text-xs  justify-center border-black border-2 text-black flex w-[15.5rem] items-center py-1 whitespace-nowrap px-8 rounded-20 
         font-normal uppercase" href="#some_id">
         read more great reviews!
         </a>
     </div>
-</div>
+</section>
     
     
 {% schema %}
