--- a/assets/app.css
+++ b/assets/app.css
@@ -654,6 +654,9 @@ video {
 .mt-2 {
   margin-top: 0.5rem;
 }
+.mt-7 {
+  margin-top: 1.75rem;
+}
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -911,6 +914,9 @@ video {
 .bg-all-night {
   background-image: linear-gradient(180deg, #26AAE0 0%, #693D90 64.06%);;
 }
+.bg-formula-day {
+  background-image: linear-gradient(180deg, #EA552E 19.48%, #FF9900 78.45%);;
+}
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -1022,6 +1028,10 @@ video {
 .text-\[9px\] {
   font-size: 9px;
 }
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
 .text-\[26px\] {
   font-size: 26px;
 }
@@ -1036,10 +1046,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 .font-bold {
   font-weight: 700;
