--- a/sections/formula.liquid
+++ b/sections/formula.liquid
@@ -24,8 +24,8 @@
                 </svg>
             </div>
             <div>
-                <p class="font-bold uppercase text-xl">L-PHENYLALANINE<span class="text-sm"><br/>
-                    Dieting reduces the "happy" neuro- transmitter dopamine — but this amino acid supports normal dopamine levels. [8]</span>
+                <p class="font-bold text-xl">L-PHENYLALANINE<p class="text-sm"><br/>
+                    Dieting reduces the "happy" neuro- transmitter dopamine — but this amino acid supports normal dopamine levels. <sup>[8]</sup></p>
                 </p>
             </div>
         </div>
