--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -124,7 +124,7 @@
             </svg>
         </a>
     </div>
-    <div class="relative flex justify-center place-items-center mt-2">
+    <div class="relative flex justify-center place-items-center mt-2 mb-5">
         <a class="text-xs  justify-center border-black border-2 text-black flex w-[15.5rem] items-center py-1 whitespace-nowrap px-8 rounded-20 
         font-normal uppercase" href="#some_id">
         read more great reviews!
