--- a/sections/formula.liquid
+++ b/sections/formula.liquid
@@ -23,8 +23,8 @@
                 </defs>
                 </svg>
             </div>
-            <div>
-                <p class="font-bold text-xl">L-PHENYLALANINE<p class="text-sm"><br/>
+            <div class="mt-2">
+                <p class="font-bold text-xl">L-PHENYLALANINE<p class="text-sm font-bold">
                     Dieting reduces the "happy" neuro- transmitter dopamine — but this amino acid supports normal dopamine levels. <sup>[8]</sup></p>
                 </p>
             </div>
