--- a/assets/app.css
+++ b/assets/app.css
@@ -747,11 +747,11 @@ video {
 .w-\[228px\] {
   width: 228px;
 }
-.w-150 {
-  width: 150px;
-}
 .w-\[15\.5rem\] {
   width: 15.5rem;
+}
+.w-150 {
+  width: 150px;
 }
 .w-1\/2 {
   width: 50%;
@@ -967,13 +967,13 @@ video {
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .px-7 {
   padding-left: 1.75rem;
@@ -1032,6 +1032,10 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
 .text-\[26px\] {
   font-size: 26px;
 }
@@ -1042,10 +1046,6 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 .font-bold {
   font-weight: 700;
@@ -1078,6 +1078,10 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+.text-orange-500 {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 @media (min-width: 375px) {
 
