--- a/sections/formula.liquid
+++ b/sections/formula.liquid
@@ -57,7 +57,7 @@
                 </p>
             </div>
         </div>
-        <div class="relative flex justify-center items-center mt-7 text-center flex-col mx-6">
+        <div class="relative flex justify-center items-center mt-7 text-center flex-col mx-6 mb-8">
             <div>
                 <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M97.5 48.5C97.5 74.4721 76.6666 95.5 51 95.5C25.3334 95.5 4.5 74.4721 4.5 48.5C4.5 22.5279 25.3334 1.5 51 1.5C76.6666 1.5 97.5 22.5279 97.5 48.5Z" stroke="white" stroke-width="3"/>
@@ -84,12 +84,12 @@
                 </svg>
             </a>
         </div>
-        <div class="relative text-center">
+        <div class="relative text-center mb-6">
             <p class="text-sm font-bold ">60-DAY MONEY BACK GUARANTEE</p>
         </div>
         <div class="relative flex justify-center place-items-center mt-2 mb-5">
             <a class="text-xs  justify-center bg-white text-orange-500 flex w-[15.5rem] items-center py-1 whitespace-nowrap px-8 rounded-20 
-            font-normal uppercase" href="#some_id">
+            font-bold uppercase" href="#some_id">
             see full ingredients list
             </a>
         </div>
