--- a/sections/formula.liquid
+++ b/sections/formula.liquid
@@ -94,6 +94,9 @@
             </a>
         </div>
     </div>
+    <div class="relative flex h-60 w-full before:content-[''] before:absolute before:top-0 before:left-0 before:border-b-15rem before:border-l-100">
+
+    </div>
 </section>
 {% schema %}
 {
