--- a/assets/app.css
+++ b/assets/app.css
@@ -1101,6 +1101,10 @@ video {
   content: var(--tw-content);
   left: 0px;
 }
+.before\:border-l-36rem::before {
+  content: var(--tw-content);
+  border-left-width: 36rem;
+}
 .before\:border-b-100::before {
   content: var(--tw-content);
   border-bottom-width: 100vw;
