--- a/assets/app.css
+++ b/assets/app.css
@@ -785,6 +785,9 @@ video {
 .max-w-1410 {
   max-width: 1410px;
 }
+.shrink {
+  flex-shrink: 1;
+}
 .basis-1\/3 {
   flex-basis: 33.333333%;
 }
@@ -1089,6 +1092,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
 }
+.text-tx-violet {
+  color: rgba(105, 61, 144, 1);
+}
 .before\:absolute::before {
   content: var(--tw-content);
   position: absolute;
@@ -1100,6 +1106,10 @@ video {
 .before\:left-0::before {
   content: var(--tw-content);
   left: 0px;
+}
+.before\:-z-10::before {
+  content: var(--tw-content);
+  z-index: -10;
 }
 .before\:border-l-100::before {
   content: var(--tw-content);
