--- a/sections/formula.liquid
+++ b/sections/formula.liquid
@@ -105,7 +105,7 @@
         {% endif %}
         </div>
     </div>
-    <div class="relative bg-formula-day flex flex-col">
+    <div class="relative bg-all-night flex flex-col">
         <div class="relative flex justify-center items-center uppercase font-bold mt-7 flex-col mx-7">
             <p class="text-sm">key ingredients inside phen24's
                 </p>
