--- a/assets/app.css
+++ b/assets/app.css
@@ -663,14 +663,17 @@ video {
 .mb-6 {
   margin-bottom: 1.5rem;
 }
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.mb-11 {
+  margin-bottom: 2.75rem;
+}
 .mt-5 {
   margin-top: 1.25rem;
 }
 .mb-9 {
   margin-bottom: 2.25rem;
-}
-.mt-3 {
-  margin-top: 0.75rem;
 }
 .-mb-14 {
   margin-bottom: -3.5rem;
