--- a/sections/formula.liquid
+++ b/sections/formula.liquid
@@ -84,10 +84,10 @@
                 </svg>
             </a>
         </div>
-        <div class="relative text-center mb-6">
+        <div class="relative text-center mb-6 mt-1">
             <p class="text-sm font-bold ">60-DAY MONEY BACK GUARANTEE</p>
         </div>
-        <div class="relative flex justify-center place-items-center mt-3 mb-5">
+        <div class="relative flex justify-center place-items-center mt-2 mb-5">
             <a class="text-xs  justify-center bg-white text-orange-500 flex w-[15.5rem] items-center py-1 whitespace-nowrap px-8 rounded-20 
             font-bold uppercase" href="#some_id">
             see full ingredients list
@@ -209,10 +209,10 @@
                 </svg>
             </a>
         </div>
-        <div class="relative text-center mb-6">
+        <div class="relative text-center mb-6 mt-2">
             <p class="text-sm font-bold ">60-DAY MONEY BACK GUARANTEE</p>
         </div>
-        <div class="relative flex justify-center place-items-center mt-3 mb-11">
+        <div class="relative flex justify-center place-items-center mt-2 mb-11">
             <a class="text-xs  justify-center bg-white text-tx-violet flex w-[15.5rem] items-center py-1 whitespace-nowrap px-8 rounded-20 
             font-bold uppercase" href="#some_id">
             see full ingredients list
