--- a/sections/reviews.liquid
+++ b/sections/reviews.liquid
@@ -8,8 +8,8 @@
             <path d="M180 0L184.49 13.8197H199.021L187.265 22.3607L191.756 36.1803L180 27.6393L168.244 36.1803L172.735 22.3607L160.979 13.8197H175.51L180 0Z" fill="black"/>
             </svg>
     </div>
-    <div class="reltive text-center mx-6 mt-4 mb-3 text-black">
-        RAVE REVIEWS FOR<span class="font-bold"> PHEN24</span>      
+    <div class="reltive text-center mx-6 mt-4 mb-3 text-black text-3xl">
+        RAVE REVIEWS FOR<span class="font-bold"><br/> PHEN24</span>      
     </div>
     <div class="relative text-center text-2xl mx-6 text-black font-bold">
         Are You Ready for 24/7 Fat Burning?
