--- a/assets/app.css
+++ b/assets/app.css
@@ -582,11 +582,17 @@ video {
 .z-20 {
   z-index: 20;
 }
+.-z-20 {
+  z-index: -20;
+}
 .m-3 {
   margin: 0.75rem;
 }
 .m-auto {
   margin: auto;
+}
+.m-2 {
+  margin: 0.5rem;
 }
 .my-2 {
   margin-top: 0.5rem;
@@ -741,6 +747,9 @@ video {
 .h-150 {
   height: 150px;
 }
+.h-11 {
+  height: 2.75rem;
+}
 .min-h-300 {
   min-height: 300px;
 }
@@ -793,6 +802,12 @@ video {
 }
 .shrink {
   flex-shrink: 1;
+}
+.grow-2 {
+  flex-grow: 2;
+}
+.grow {
+  flex-grow: 1;
 }
 .basis-1\/3 {
   flex-basis: 33.333333%;
@@ -962,6 +977,9 @@ video {
   -o-object-fit: contain;
      object-fit: contain;
 }
+.p-2 {
+  padding: 0.5rem;
+}
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1061,6 +1079,9 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+.text-2xs {
+  font-size: 10px;
 }
 .font-bold {
   font-weight: 700;
