--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -9,22 +9,22 @@
                     <p></p>
                 </div>
                 <div class="flex m-2">
-                    <p>Number of natural ingredients</p>
+                    <p>Number of natural<br/> ingredients</p>
                 </div>
                 <div class="flex m-2">
-                    <p>Daytime fat burning formula</p>
+                    <p>Daytime fat <br/>burning formula</p>
                 </div>
                 <div class="flex m-2">
-                    <p>Nighttime fat burning formula</p>
+                    <p>Nighttime fat burning<br/>  formula</p>
                 </div>
                 <div class="flex m-2">
-                    <p>No habit-forming melatonin</p>
+                    <p>No habit-forming<br/>  melatonin</p>
                 </div>
                 <div class="flex m-2">
-                    <p>Buy 2 + Get 1 Free special offer</p>
+                    <p>Buy 2 + Get 1 Free<br/>  special offer</p>
                 </div>
-                <div class="flex m-2">
-                    <p>100% satisfaction, 60-day money back guarantee</p>
+                <div class="flex m-2 text-3xs">
+                    <p>100% satisfaction, 60-day<br/> money back guarantee</p>
                 </div>
             </div>
             <div class="grow">
