--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -8,22 +8,22 @@
                 <div class="flex h-11 m-2">
                     <p></p>
                 </div>
-                <div class="flex m-2">
+                <div class="flex m-2 grow">
                     <p>Number of natural<br/> ingredients</p>
                 </div>
-                <div class="flex m-2">
+                <div class="flex m-2 grow"">
                     <p>Daytime fat <br/>burning formula</p>
                 </div>
-                <div class="flex m-2">
+                <div class="flex m-2 grow"">
                     <p>Nighttime fat burning<br/>  formula</p>
                 </div>
-                <div class="flex m-2">
+                <div class="flex m-2 grow"">
                     <p>No habit-forming<br/>  melatonin</p>
                 </div>
-                <div class="flex m-2">
+                <div class="flex m-2 grow"">
                     <p>Buy 2 + Get 1 Free<br/>  special offer</p>
                 </div>
-                <div class="flex m-2 text-3xs">
+                <div class="flex m-2 text-3xs grow"">
                     <p>100% satisfaction, 60-day<br/> money back guarantee</p>
                 </div>
             </div>
